# probdisasm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  go.mod  main.go  pyproject.toml  superset.go
.github/workflows/: github_release.yml  pypi_publish.yml
backup/: algo.md
backup/src/: lib.rs  superset.rs
binaries/: ls.posteriors.csv  testprog_O0  testprog_O0.posteriors.csv  testprog_O2  testprog_O2.posteriors.csv
binaries/src/: testprog.c
eval/: evaluate.py
examples/: basic.py  basic.rs  disassemble.py  gcc_coreutils_64_O0_make-prime-list.stripped
src/: analysis.rs  header.rs  hints.rs  lib.rs  main.rs  superset.rs
tests/bins/: elf_test
