[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "probdisasm"
dynamic = [
    "version",
    "description",
    "readme",
    "license",
    "authors",
    "keywords",
    "urls",
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[tool.maturin]
bindings = "pyo3"
features = ["python"]
